# IFEM-PoroElasticity

./: CMakeLists.txt  PoroElasticity.C  PoroElasticity.h  PoroMaterial.C  PoroMaterial.h  README.md  SIMDynPoroElasticity.h  SIMPoroElasticity.h  SIMStatPoroElasticity.h  main.C  main_PoroElasticity.C
PoroElastic/: CMakeLists.txt  PoroElasticity.C  PoroElasticity.h  PoroMaterial.C  PoroMaterial.h  PoroMats.C  PoroSolutions.C  PoroSolutions.h  SIMPoroElasticity.C  SIMPoroElasticity.h  SIMThermoPoroElasticity.h  ThermoPoroElasticity.C  ThermoPoroElasticity.h
Test/: OGSBenchmark1D-LR.reg  OGSBenchmark1D-nonmixed.reg  OGSBenchmark1D-nonmixed.xinp  OGSBenchmark1D.g2  OGSBenchmark1D.reg  OGSBenchmark1D.xinp  Plaxis1DVerif-LR.reg  Plaxis1DVerif-mixed_C0.reg  Plaxis1DVerif-nondim.reg  Plaxis1DVerif-nondim.xinp  Plaxis1DVerif-nonmixed.reg  Plaxis1DVerif-nonmixed.xinp  Plaxis1DVerif.reg  Plaxis1DVerif.xinp  SoilColumn3D-nonmixed.hreg  SoilColumn3D-nonmixed.reg  SoilColumn3D-nonmixed.xinp  SoilColumn3D.hreg  SoilColumn3D.reg  SoilColumn3D.vreg  SoilColumn3D.xinp  Terzhagi-nondim.reg  Terzhagi-nondim.xinp  Terzhagi-restart.reg  Terzhagi.hreg  Terzhagi.reg  Terzhagi.xinp  TestPoroMaterial.C  TestSIMPoroElasticity.C  ThermalConsolidation.reg  ThermalConsolidation.xinp  VolFlux.reg  VolFlux.xinp
doc/: Doxyfile.in  PoroElasticity.dox  PoroElasticity.dox.in
jenkins/: build.sh
